--- a/src/App.module.css
+++ b/src/App.module.css
@@ -16,6 +16,10 @@
 * {
     box-sizing: border-box;
 }
+
+.Body {
+    padding-top: 120px;
+}
   
 a {
     color: var(--dark-slate-grey) !important;
