--- a/src/App.module.css
+++ b/src/App.module.css
@@ -21,6 +21,13 @@
 .Body {
     padding-top: 120px;
 }
+
+.Content {
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 3px;
+    border: 1px solid #fff;
+}
   
 a {
     color: var(--dark-slate-grey) !important;
