--- a/src/styles/LogInSignUpForm.module.css
+++ b/src/styles/LogInSignUpForm.module.css
@@ -7,12 +7,14 @@
     text-align: center;
     padding: 15px;
 }
+
+.Input:focus {
+    box-shadow: none;
+    border: 1px solid var(--aquamarine);
+}
   
 .Link {
-    text-decoration: none;
-    text-align: center;
     display: block;
-    margin: auto;
 }
 
 .Link span {
