--- a/src/styles/LogInSignUpForm.module.css
+++ b/src/styles/LogInSignUpForm.module.css
@@ -12,6 +12,15 @@
     box-shadow: none;
     border: 1px solid var(--aquamarine);
 }
+
+.Input::placeholder {
+    font-weight: normal;
+}
+  
+.Input[value] {
+    font-weight: bold;
+    color: var(--dark-slate-grey);
+}
   
 .Link {
     display: block;
@@ -19,4 +28,10 @@
 
 .Link span {
     color: var(--aquamarine);
+}
+
+.Alert {
+    margin-bottom: 0;
+    padding: 0;
+    font-weight: bold;
 }
