Remove arrow icon from dropdown menu

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -11,3 +11,11 @@
     border: none !important;
 }
 
+.Dropdown:active {
+    background-color: var(--light) !important;
+}
+
+a::after {
+    display: none !important;
+}
+
