--- a/src/styles/CommentCreateEditForm.module.css
+++ b/src/styles/CommentCreateEditForm.module.css
@@ -11,3 +11,8 @@
     box-shadow: none;
     border: 1px solid var(--aquamarine);
 }
+
+.Line {
+    background: var(--aquamarine);
+    margin: 25px 0;
+}
