Add navigation menus styles and adjust display on small screens

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -96,22 +96,22 @@ i {
     object-fit: contain;
 }
 
-@media all and (max-width: 992px) {
+@media all and (max-width: 991px) {
     .CollapsedColumn {
-      display: inline-block;
-      width: 32%;
+        display: inline-flex;
+        width: 31%;
     }
     .CollapsedColumn:nth-child(2) {
-      margin: 0 2%;
+        margin: 0 2%;
     }
 }
   
   @media all and (max-width: 768px) {
     .CollapsedColumn {
-      display: block;
-      width: 100%;
+        width: 100%;
+        justify-content: space-around;
     }
     .CollapsedColumn:nth-child(2) {
-      margin: 0;
+        margin: 0;
     }
 }
