--- a/src/styles/SmallMenuContainer.module.css
+++ b/src/styles/SmallMenuContainer.module.css
@@ -1,6 +1,11 @@
 .Link {
-    display: inline;
-    margin-left: 7px;
+  display: inline;
+  margin-left: 7px;
+}
+
+.LikeFeedAddDisplay a {
+  display: block !important;
+  margin: 5px 0;
 }
   
 @media all and (min-width: 991px) {
@@ -24,6 +29,7 @@
   
     .LikeFeedAddDisplay a {
       text-align: center !important;
+      margin: 0;
     }
   
     .LikeFeedAddDisplay img {
