--- a/src/App.module.css
+++ b/src/App.module.css
@@ -99,3 +99,9 @@ i {
     max-width: 100%;
     object-fit: contain;
 }
+
+.Line {
+    border-top: 1px solid var(--aquamarine);
+    margin: 23px auto;
+    width: 70px;
+}
