--- a/src/styles/SmallMenuContainer.module.css
+++ b/src/styles/SmallMenuContainer.module.css
@@ -13,12 +13,23 @@
   border-collapse: separate;
   border-spacing: 7px;
 }
+
+@media all and (min-width: 991px) {
+  .LikeFeedAddDisplay {
+    display: flex;
+    flex-direction: column;
+  }
+}
   
 @media all and (max-width: 991px) {
   /* 3 columns on medium - small screens */
   .CollapsedColumn {
     display: table-cell;
     width: 31%;
+  }
+  .SplitColumns {
+    display: inline-table;
+    border-spacing: 0;
   }
 }
 
