Add TwoColumn style for two menu columns - consistent across

--- a/src/styles/SmallMenuContainer.module.css
+++ b/src/styles/SmallMenuContainer.module.css
@@ -29,7 +29,9 @@
   }
   .SplitColumns {
     display: inline-table;
-    border-spacing: 0;
+  }
+  .TwoColumns {
+    border-spacing: 0 !important;
   }
 }
 
