--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,6 +6,10 @@
     --beige: #b1aca6;
     --aquamarine: #40B0DF;
 }
+
+::selection {
+    background-color: rgba(64, 176, 223, 0.4);
+}
   
 .App {
     font-family: "Prompt", sans-serif;
