--- a/src/styles/FollowButtons.module.css
+++ b/src/styles/FollowButtons.module.css
@@ -20,6 +20,7 @@
     box-shadow: 1px 1px 5px var(--dark-slate-grey) !important;
     border-color: var(--aquamarine) !important;
     font-weight: bold;
+    color: var(--dark-slate-grey);
 }
 
 .ButtonUnfollow {
