--- a/src/styles/Landing.module.css
+++ b/src/styles/Landing.module.css
@@ -1,8 +1,9 @@
 .LandingImage {
-    width: 420px;
-    margin: 0 auto;
+  width: 370px;
+  margin: 0 auto;
+  height: 100%;
 }
-  
+
 .LandingButtonMargin {
   margin-right: 15px;
 }
@@ -17,14 +18,17 @@
   padding-top: 7px;
 }
 
+/* Remove right margin to the buttons on smaller screens */
 @media all and (max-width: 500px) {
   .LandingButtonMargin {
     margin-right: 0;
   }
 }
 
+/* Adjust landing page image size on smaller screens */
 @media all and (max-width: 440px) {
   .LandingImage {
     width: 80%;
+    height: 80%;
   }
 }
