Update NavBar.module.css file

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -7,6 +7,11 @@
     padding: 8px;
 }
 
+.Active i {
+    transform: rotate(-15deg) scale(1.1);
+    color: var(--dark-slate-grey);
+}
+
 .NavbarToggle {
     border: none !important;
 }
