--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -1,20 +1,21 @@
 .Post {
-    background-color: #fff;
-    border-radius: 3px;
-    margin-bottom: 16px;
-    text-align: center;
+  background-color: #fff;
+  border-radius: 3px;
+  margin-bottom: 16px;
+  text-align: center;
 }
 
 .Container {
-    display: grid;
-    grid-template-columns: 60px auto 60px;
-    grid-template-rows: 30px 30px;
-    grid-auto-flow: row;
+  display: grid;
+  grid-template-columns: 60px auto 60px;
+  grid-template-rows: 30px 30px;
+  grid-auto-flow: row;
 }
 
+/* Display of user avatar, username & post date */
 .AvatarGrid {
-    grid-column: 1;
-    grid-row: 1 / 3;
+  grid-column: 1;
+  grid-row: 1 / 3;
 }
 
 .Username {
@@ -41,14 +42,10 @@
   justify-content: flex-end;
   align-items: center;
 }
-  
-.Line {
-    width: 70px;
-    color: var(--dark-slate-grey);
-}
-  
+
+/* Type of cuisine badge within the post */
 .BadgePost {
-    padding: 5px;
-    margin: 0 4px;
-    font-size: inherit;
+  padding: 5px 8px;
+  margin: 0 4px;
+  font-size: inherit;
 }
