Upload PostCreateEditForm.module.css file

--- a/src/styles/PostCreateEditForm.module.css
+++ b/src/styles/PostCreateEditForm.module.css
@@ -1,8 +1,12 @@
 .Container {
     min-height: 300px;
 }
-
+  
 .ButtonChangeImage {
-    color: #fff;
+    color: var(--dark-slate-grey);
     padding: 7px;
+}
+  
+.UploadPicture:hover {
+    cursor: pointer;
 }
