--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -43,7 +43,7 @@
   align-items: center;
 }
 
-/* Type of cuisine badge within the post */
+/* Type of badge within the post */
 .BadgePost {
   padding: 5px 8px;
   margin: 0 4px;
