--- a/src/styles/FollowButtons.module.css
+++ b/src/styles/FollowButtons.module.css
@@ -9,31 +9,35 @@
 
 .ButtonFollow {
     font-weight: bold;
-    background-color: var(--dark-slate-grey);
+    background-color: var(--aquamarine);
+    box-shadow: 1px 1px 5px var(--aquamarine) !important;
     color: #fff;
 }
 
 .ButtonFollow:hover,
 .ButtonFollow:focus,
 .ButtonFollow:active {
-    background-color: var(--aquamarine) !important;
-    box-shadow: 1px 1px 5px var(--dark-slate-grey) !important;
+    background-color: #fff !important;
+    box-shadow: 1px 1px 5px var(--aquamarine) !important;
     border-color: var(--aquamarine) !important;
     font-weight: bold;
-    color: var(--dark-slate-grey);
+    color: var(--light-grey);
 }
 
 .ButtonUnfollow {
     font-weight: bold;
-    background-color: var(--light);
-    color: var(--dark-slate-grey);
+    background-color: #fff;
+    color: var(--light-grey);
+    box-shadow: 1px 1px 5px var(--aquamarine) !important;
+    border-color: var(--aquamarine) !important;
 }
 
 .ButtonUnfollow:hover,
 .ButtonUnfollow:focus,
 .ButtonUnfollow:active {
-    background-color: var(--dark-slate-grey) !important;
-    border-color: var(--dark-slate-grey) !important;
+    background-color:var(--aquamarine) !important;
+    border-color: var(--aquamarine) !important;
+    box-shadow: 1px 1px 5px var(--aquamarine) !important;
     color: #fff;
 }
 
