--- a/src/App.module.css
+++ b/src/App.module.css
@@ -26,6 +26,11 @@
     padding-top: 120px;
 }
 
+h1 {
+    font-family: "Carter One", cursive, sans-serif;
+    font-weight: 200;
+}
+
 h3 {
     font-weight: bold
 }
